@@ -1,5 +1,8 @@
 /*
  * $Log: 822body.c,v $
+ * Revision 1.5  2024-01-23 01:19:48+05:30  Cprogrammer
+ * include buffer_defs.h for buffer size definitions
+ *
  * Revision 1.4  2022-10-30 17:54:31+05:30  Cprogrammer
  * converted to ansic prototype
  *
@@ -68,7 +71,7 @@ main(int argc, char **argv)
 void
 getversion_822body_c()
 {
-	static char    *x = "$Id: 822body.c,v 1.4 2022-10-30 17:54:31+05:30 Cprogrammer Exp mbhangui $";
+	static char    *x = "$Id: 822body.c,v 1.5 2024-01-23 01:19:48+05:30 Cprogrammer Exp mbhangui $";
 
 	x++;
 }
