@@ -1,5 +1,8 @@
 /*
  * $Log: 822headerfilter.c,v $
+ * Revision 1.5  2024-01-23 01:20:09+05:30  Cprogrammer
+ * include buffer_defs.h for buffer size definitions
+ *
  * Revision 1.4  2020-11-24 13:42:56+05:30  Cprogrammer
  * /usr/local/src/projects/rpmbuild/RPMS/x86_64/libqmail-devel-1.0-1.1.fc33.x86_64.rpm
  *
@@ -101,7 +104,7 @@ main(int argc, char **argv, char **envp)
 void
 getversion_822headerfilter_c()
 {
-	static char    *x = "$Id: 822headerfilter.c,v 1.4 2020-11-24 13:42:56+05:30 Cprogrammer Exp mbhangui $";
+	static char    *x = "$Id: 822headerfilter.c,v 1.5 2024-01-23 01:20:09+05:30 Cprogrammer Exp mbhangui $";
 
 	x++;
 }
