@@ -1,5 +1,8 @@
 /*
  * $Log: 822headerok.c,v $
+ * Revision 1.5  2024-01-23 01:20:14+05:30  Cprogrammer
+ * include buffer_defs.h for buffer size definitions
+ *
  * Revision 1.4  2022-10-30 17:55:00+05:30  Cprogrammer
  * converted to ansic prototype
  *
@@ -49,7 +52,7 @@ main(int argc, char **argv)
 void
 getversion_822headerok_c()
 {
-	static char    *x = "$Id: 822headerok.c,v 1.4 2022-10-30 17:55:00+05:30 Cprogrammer Exp mbhangui $";
+	static char    *x = "$Id: 822headerok.c,v 1.5 2024-01-23 01:20:14+05:30 Cprogrammer Exp mbhangui $";
 
 	x++;
 }
