@@ -1,5 +1,8 @@
 /*
  * $Log: checkaddr.c,v $
+ * Revision 1.5  2024-01-23 01:24:00+05:30  Cprogrammer
+ * include buffer_defs.h for buffer size definitions
+ *
  * Revision 1.4  2021-08-29 23:27:08+05:30  Cprogrammer
  * define functions as noreturn
  *
@@ -75,7 +78,7 @@ main(int argc, char **argv)
 void
 getversion_checkaddr_c()
 {
-	static char    *x = "$Id: checkaddr.c,v 1.4 2021-08-29 23:27:08+05:30 Cprogrammer Exp mbhangui $";
+	static char    *x = "$Id: checkaddr.c,v 1.5 2024-01-23 01:24:00+05:30 Cprogrammer Exp mbhangui $";
 
 	x++;
 }
