@@ -1,5 +1,5 @@
 /*
- * $Id: qmail-queue.c,v 1.92 2023-12-25 09:30:45+05:30 Cprogrammer Exp mbhangui $
+ * $Id: qmail-queue.c,v 1.93 2024-01-23 01:23:08+05:30 Cprogrammer Exp mbhangui $
  */
 #include <sys/types.h>
 #include <sys/stat.h>
@@ -1191,7 +1191,7 @@ main()
 void
 getversion_qmail_queue_c()
 {
-	static char    *x = "$Id: qmail-queue.c,v 1.92 2023-12-25 09:30:45+05:30 Cprogrammer Exp mbhangui $";
+	static char    *x = "$Id: qmail-queue.c,v 1.93 2024-01-23 01:23:08+05:30 Cprogrammer Exp mbhangui $";
 
 	x = sccsidmakeargsh;
 	x++;
@@ -1199,6 +1199,9 @@ getversion_qmail_queue_c()
 #endif
 /*
  * $Log: qmail-queue.c,v $
+ * Revision 1.93  2024-01-23 01:23:08+05:30  Cprogrammer
+ * include buffer_defs.h for buffer size definitions
+ *
  * Revision 1.92  2023-12-25 09:30:45+05:30  Cprogrammer
  * made DEATH configurable
  *
